# fcitx5-libthai

./: CMakeLists.txt  Messages.sh  org.fcitx.Fcitx5.Addon.LibThai.metainfo.xml.in  org.fcitx.fcitx5-libthai.metainfo.xml.in
.github/workflows/: check.yml
cmake/: FindIconv.cmake
po/: CMakeLists.txt  LINGUAS  da.po  de.po  fcitx5-libthai.pot  fr.po  he.po  ja.po  ko.po  ru.po  vi.po  zh_CN.po  zh_TW.po
src/: CMakeLists.txt  engine.cpp  engine.h  iconvwrapper.cpp  iconvwrapper.h  libthai-addon.conf.in  libthai-addon.conf.in.in  libthai.conf.in  thaikb.cpp  thaikb.h
test/: CMakeLists.txt  testlibthai.cpp
test/addon/: CMakeLists.txt
test/inputmethod/: CMakeLists.txt
